--- a/WebProd.config
+++ b/WebProd.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <!-- SQL Server Production -->
-    <add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Ns711101"
+    <add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Fashionkred123"
           providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <appSettings>
