Support for multiple products
Support for multiple tags
Added title, tags and restyled option in the look page and create page
Createlook now supports title, tag and re-style

--- a/Web.config
+++ b/Web.config
@@ -8,8 +8,10 @@
 <configuration>
   <connectionStrings>
     <!-- SQL Server Production -->
-    <add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Fashionkred123"
-          providerName="System.Data.SqlClient"></add>
+    <!--<add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Fashionkred123"
+          providerName="System.Data.SqlClient"></add>-->
+    <add name="DatabaseConnectionString" connectionString="server=localhost;Database=Fashionkred;Integrated Security=True;" providerName="System.Data.SqlClient"></add>
+
   </connectionStrings>
   <appSettings>
     <!--<add key="canvasurl" value="http://fashionkred.com/?fb=1"></add>
