--- a/Web.config
+++ b/Web.config
@@ -11,10 +11,12 @@
     <!--<add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Fashionkred123"
           providerName="System.Data.SqlClient"></add>-->
     <add name="DatabaseConnectionString" connectionString="server=localhost;Database=Fashionkred;Integrated Security=True;" providerName="System.Data.SqlClient"></add>
-
+    <!--<add name="DatabaseConnectionString" connectionString="Integrated Security=SSPI;Data Source=.;Initial Catalog=Fashionkred;Max Pool Size=200" providerName="System.Data.SqlClient"></add>-->
+    <!--<add name="DatabaseConnectionString" connectionString="Data Source=54.187.150.46;Initial Catalog=Fashionkred;Persist Security Info=True;User ID=admin;Password=Fk711101"
+          providerName="System.Data.SqlClient"></add>-->
   </connectionStrings>
   <appSettings>
-    <!--<add key="canvasurl" value="http://fashionkred.com/?fb=1"></add>
+    <add key="canvasurl" value="http://fashionkred.com/?fb=1"></add>
     <add key="environment" value="Production" />
     <add key="appid" value="155821997899161"></add>
     <add key="appsecret" value="726ce6b86758dc53c06f86e16414140f"></add>
@@ -31,9 +33,9 @@
     <add key="ContestName4" value="Casual Outfit"/>
     <add key="conteststring" value="NORDSTROM OUTFIT CONTEST"/>
     <add key="contestsubstring" value="VOTE OR CREATE YOUR OWN LOOK"/>
-    <add key="contestimage" value="images/nordstrom.png"/>-->
+    <add key="contestimage" value="images/nordstrom.png"/>
     
-    <add key="CanvasUrl" value="http://localhost:17544/FashionKred/?fb=1"></add>
+    <!--<add key="CanvasUrl" value="http://localhost:17544/FashionKred/?fb=1"></add>
     <add key="Environment" value="dev" />
     <add key="AppId" value="175524155933050"></add>
     <add key="AppSecret" value="7fc2a80f7b64e5278136beb303d9e5c1"></add>
@@ -50,7 +52,7 @@
     <add key="ContestName4" value="Casual Outfit"/>
     <add key="ContestString" value="NORDSTROM OUTFIT CONTEST"/>
     <add key="ContestSubString" value="EVENING SUMMER BRIDAL"/>
-    <add key="ContestImage" value="images/logo_macys.png"/>
+    <add key="ContestImage" value="images/logo_macys.png"/>-->
     
     
   </appSettings>
@@ -78,9 +80,9 @@
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
       </providers>
     </profile>
-    <httpModules>
+    <!--<httpModules>
       <add name="Session" type="System.Web.SessionState.SessionStateModule" />
-    </httpModules>
+    </httpModules>-->
     <roleManager enabled="false">
       <providers>
         <clear/>
