Update since last commit

--- a/Web.config
+++ b/Web.config
@@ -10,10 +10,10 @@
     <!-- SQL Server Production -->
     <!--<add name="DatabaseConnectionString" connectionString="Data Source=mssql2008.reliablesite.net,14333,14333;Initial Catalog=facebook;Persist Security Info=True;User ID=nirveek_de;Password=Fashionkred123"
           providerName="System.Data.SqlClient"></add>-->
-    <add name="DatabaseConnectionString" connectionString="server=localhost;Database=Fashionkred;Integrated Security=True;" providerName="System.Data.SqlClient"></add>
+    <!--<add name="DatabaseConnectionString" connectionString="server=localhost;Database=Fashionkred;Integrated Security=True;" providerName="System.Data.SqlClient"></add>-->
     <!--<add name="DatabaseConnectionString" connectionString="Integrated Security=SSPI;Data Source=.;Initial Catalog=Fashionkred;Max Pool Size=200" providerName="System.Data.SqlClient"></add>-->
-    <!--<add name="DatabaseConnectionString" connectionString="Data Source=54.187.150.46;Initial Catalog=Fashionkred;Persist Security Info=True;User ID=admin;Password=Fk711101"
-          providerName="System.Data.SqlClient"></add>-->
+    <add name="DatabaseConnectionString" connectionString="Data Source=54.187.150.46;Initial Catalog=Fashionkred;Persist Security Info=True;User ID=admin;Password=Fk711101"
+          providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <appSettings>
     <add key="canvasurl" value="http://fashionkred.com/?fb=1"></add>
@@ -60,9 +60,9 @@
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off"/>
     <pages enableSessionState="true" />
-      <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
-    </authentication>
+      <authentication mode="None">
+      <!--<forms loginUrl="~/Account/Login.aspx" timeout="2880" />-->
+      </authentication>
 
     <membership>
       <providers>
@@ -97,4 +97,11 @@
   <system.webServer>
      <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
