--- a/Web.config
+++ b/Web.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
   <connectionStrings>
     <!-- SQL Server Production -->
@@ -12,29 +10,28 @@
           providerName="System.Data.SqlClient"></add>-->
     <!--<add name="DatabaseConnectionString" connectionString="server=localhost;Database=Fashionkred;Integrated Security=True;" providerName="System.Data.SqlClient"></add>-->
     <!--<add name="DatabaseConnectionString" connectionString="Integrated Security=SSPI;Data Source=.;Initial Catalog=Fashionkred;Max Pool Size=200" providerName="System.Data.SqlClient"></add>-->
-    <add name="DatabaseConnectionString" connectionString="Data Source=54.187.150.46;Initial Catalog=Fashionkred;Persist Security Info=True;User ID=admin;Password=Fk711101"
-          providerName="System.Data.SqlClient"></add>
+    <add name="DatabaseConnectionString" connectionString="Data Source=startcult.com;Initial Catalog=Fashionkred;Persist Security Info=True;User ID=admin;Password=Fk711101" providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <appSettings>
     <add key="canvasurl" value="http://fashionkred.com/?fb=1"></add>
     <add key="environment" value="Production" />
     <add key="appid" value="155821997899161"></add>
     <add key="appsecret" value="726ce6b86758dc53c06f86e16414140f"></add>
-    <add key="Retailer" value="1"/>
-    <add key="RetailerName" value="Nordstrom"/>
-    <add key="TotalContest" value="4"/>
-    <add key="ContestId1" value="4"/>
-    <add key="ContestName1" value="Evening Outfit"/>
-    <add key="ContestId2" value="5"/>
-    <add key="ContestName2" value="Summer Outfit"/>
-    <add key="ContestId3" value="7"/>
-    <add key="ContestName3" value="Bridal Outfit"/>
-    <add key="ContestId4" value="8"/>
-    <add key="ContestName4" value="Casual Outfit"/>
-    <add key="conteststring" value="NORDSTROM OUTFIT CONTEST"/>
-    <add key="contestsubstring" value="VOTE OR CREATE YOUR OWN LOOK"/>
-    <add key="contestimage" value="images/nordstrom.png"/>
-    
+    <add key="Retailer" value="1" />
+    <add key="RetailerName" value="Nordstrom" />
+    <add key="TotalContest" value="4" />
+    <add key="ContestId1" value="4" />
+    <add key="ContestName1" value="Evening Outfit" />
+    <add key="ContestId2" value="5" />
+    <add key="ContestName2" value="Summer Outfit" />
+    <add key="ContestId3" value="7" />
+    <add key="ContestName3" value="Bridal Outfit" />
+    <add key="ContestId4" value="8" />
+    <add key="ContestName4" value="Casual Outfit" />
+    <add key="conteststring" value="NORDSTROM OUTFIT CONTEST" />
+    <add key="contestsubstring" value="VOTE OR CREATE YOUR OWN LOOK" />
+    <add key="contestimage" value="images/nordstrom.png" />
+    <add key="MandrillAPIKey" value="-qH5VX30hJ56Iv5_jROffg" />
     <!--<add key="CanvasUrl" value="http://localhost:17544/FashionKred/?fb=1"></add>
     <add key="Environment" value="dev" />
     <add key="AppId" value="175524155933050"></add>
@@ -53,31 +50,24 @@
     <add key="ContestString" value="NORDSTROM OUTFIT CONTEST"/>
     <add key="ContestSubString" value="EVENING SUMMER BRIDAL"/>
     <add key="ContestImage" value="images/logo_macys.png"/>-->
-    
-    
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
-    <customErrors mode="Off"/>
+    <compilation debug="true" targetFramework="4.0"></compilation>
+    <customErrors mode="Off" />
     <pages enableSessionState="true" />
-      <authentication mode="None">
+    <authentication mode="None">
       <!--<forms loginUrl="~/Account/Login.aspx" timeout="2880" />-->
-      </authentication>
-
+    </authentication>
     <membership>
       <providers>
-        <clear/>
-        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices"
-             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
-             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
-
     <profile>
       <providers>
-        <clear/>
-        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+        <clear />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
     <!--<httpModules>
@@ -85,23 +75,28 @@
     </httpModules>-->
     <roleManager enabled="false">
       <providers>
-        <clear/>
+        <clear />
         <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
-        
       </providers>
     </roleManager>
-
   </system.web>
-
   <system.webServer>
-     <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="50000000"/>
+        <jsonSerialization maxJsonLength="50000000" />
       </webServices>
     </scripting>
   </system.web.extensions>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
