--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Facebook" version="6.1.4" targetFramework="net40" />
+  <package id="FSharp.Core" version="3.1.2.1" targetFramework="net40" />
 </packages>
