--- a/Web.config
+++ b/Web.config
@@ -32,6 +32,7 @@
     <add key="contestsubstring" value="VOTE OR CREATE YOUR OWN LOOK" />
     <add key="contestimage" value="images/nordstrom.png" />
     <add key="MandrillAPIKey" value="-qH5VX30hJ56Iv5_jROffg" />
+    <add key="MailchimpAPIKey" value="37e3334a970f2334ac7ffcf96caaec62-us9" />
     <!--<add key="CanvasUrl" value="http://localhost:17544/FashionKred/?fb=1"></add>
     <add key="Environment" value="dev" />
     <add key="AppId" value="175524155933050"></add>
@@ -96,6 +97,14 @@
       <dependentAssembly>
         <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.28.0" newVersion="2.2.28.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
