--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="Facebook" version="6.1.4" targetFramework="net40" />
   <package id="FSharp.Core" version="3.1.2.1" targetFramework="net40" />
+  <package id="MailChimp.NET" version="1.1.72.0" targetFramework="net40" />
+  <package id="Mandrill" version="1.0.109.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net40" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net40" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net40" />
 </packages>
